container changed to prevent overlaping of blocks on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.container {
+  position: relative;
+}
